Fixed width problem

--- a/style.css
+++ b/style.css
@@ -205,7 +205,9 @@ footer{
 }
 
 /* responsive design for mobile*/
-@media (min-width: 320px) and (max-width: 425px) {
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
     /* common style */
     .container{
         margin: 0px 16px 0px 16px;
@@ -242,7 +244,7 @@ footer{
         grid-template-columns: repeat(1,1fr);
     }
     .player {
-        width: 258px;
+        width: 90%;
         padding: 15px;
         margin-bottom: 24px;
     }
@@ -254,7 +256,7 @@ footer{
     }
     .highlight-info {
         height: 329px;
-        width: 299px;
+        width: 90%;
     }
     .highlight-info h2 {
         margin-top: 40px;
@@ -262,10 +264,13 @@ footer{
         line-height: 40px;
         font-weight: 700;
     }
+    .highlight-banner{
+        margin-top: 30px;
+    }
     .highlight-banner img {
         margin-top: 64px;
         height: 237px;
-        width: 286px;
+        width: 100%;
     }
     /* follow-copa-america */
     .follow-copa-america {
